<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F2839"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/details_img"

        android:layout_width="match_parent"
        android:layout_height="400dp"

        android:contentDescription="@string/img" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/small_img"

        android:layout_width="150dp"
        android:layout_height="200dp"
android:layout_marginTop="250dp"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/img" />

    <TextView
        android:id="@+id/rate_details"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/rating"
        android:layout_marginTop="370dp"

        android:layout_toRightOf="@+id/small_img"
        android:textColor="@color/background_blue2"

        />

        <TextView
            android:id="@+id/avg_rate"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/rate_details"
            android:layout_toEndOf="@+id/rate_details"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="370dp"


            android:text="@string/juju_release_date"
            android:textSize="23sp"
            android:textColor="#838688"
            />

        <TextView
            android:id="@+id/release_date"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/small_img"
            android:layout_marginTop="410dp"


            android:text="@string/juju_release_date"
            android:textSize="23sp"
            android:textColor="#838688"
            />
</RelativeLayout>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >


    <TextView
        android:id="@+id/movie_title"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/jujutsu_kaisen"
        android:textSize="28sp"
        android:textColor="@color/white" />

        <ImageView
            android:id="@+id/fav_details"

            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginLeft="350dp"
            android:layout_marginStart="350dp"

            android:background="@drawable/ic_baseline_favorite_24"
            app:backgroundTint="#BA1141"
            android:contentDescription="@string/fav" />

    </RelativeLayout>


    <TextView
        android:id="@+id/synopsis"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"

        android:text="@string/lorem"
        android:textSize="20sp"
        android:textColor="#ECE7E7" />

</LinearLayout>